Commit Scope table

--- a/project_description.html
+++ b/project_description.html
@@ -309,8 +309,282 @@
         <h4>
             <li>Scope:</li>
         </h4>
-        <!-- REMEMBER TO ADD THE SCOPE TABLE -->
-        
+        <table>
+            <tr>
+                <th rowspan="33">IN SCOPE</th>
+                <th colspan="3">Features for every user</th>
+            </tr>
+            <tr>
+                <th>Priority</th>
+                <th>Feature</th>
+                <th>Description</th>
+            </tr>
+            <tr>
+                <td rowspan="4">High</td>
+                <td>Login Page</td>
+                <td>
+                    <p>Provide the users with login options as a Student, Teacher, or Parent using the username and passwords provided.</p>
+                    <p>The administrator of a specific school can log in with a teacher account that is able to amend the School Information and Notifications for the students.</p>
+                </td>
+            </tr>
+            <tr>
+                <td>Home page</td>
+                <td>
+                    <p>This is the basis of the whole application where you can get access to all the features.</p>
+                    <p>There are also Favorite sections where the details of your favorite features will be shown to you firsthand (Example: choosing Performance Checking as a favorite feature will set the performance chart to appear on your home page).</p>
+                </td>
+            </tr>
+            <tr>
+                <td>Setting</td>
+                <td>
+                    <p>This is where you can adjust:</p>
+                    <ul>
+                        <li>Theme: the background color and style</li>
+                        <li>Font size: the text size</li>
+                        <li>Language: the language that is used by the system</li>
+                        <li>Privacy setting: restrict the people that can access your account</li>
+                        <li>Notification: the notification style and what to be notified of</li>
+                        <li>App permissions: what other applications the system can access</li>
+                    </ul>
+                </td>
+            </tr>
+            <tr>
+                <td>Navigation bar</td>
+                <td>
+                    <p>Display all the features of the applications and can scroll horizontally to see more features.</p>
+                    <p>This is where every file that the users have uploaded is stored. This segment varies for each type of user (Teacher, Student, Parent)</p>
+                    <p>The documents can be grouped according to the users’ designation or set to time-based by default.</p>
+                    <p>The document feature can also be used to search for documentation related to the topic and contain the list of recommendation.</p>
+                </td>
+            </tr>
+            <tr>
+                <td rowspan="3">Medium</td>
+                <td>School information</td>
+                <td>
+                    <p>This is where the app administrator of the school uploads their school details publicly to everyone.</p>
+                    <p>This page can contain:</p>
+                    <ul>
+                        <li>The history of the school</li>
+                        <li>The location of the school</li>
+                        <li>The school's contact information</li>
+                        <li>The awards of the school</li>
+                        <li>The courses that the school is offering</li>
+                        <li>The school services and facilities</li>
+                        <li>The school’s events</li>
+                    </ul>
+                </td>
+            </tr>
+            <tr>
+                <td>Reminder</td>
+                <td>The reminder will remind the user about upcoming events in their timetable. Reminded events vary based on the type of user (Example: students will be reminded about deadlines, teachers will be reminded about marking deadlines, and parents will be reminded about fees).</td>
+            </tr>
+            <tr>
+                <td>Search bar</td>
+                <td>The search bar can help users search for a specific feature in case they can’t find it on their screen. It can also be used to search for documents and lectures for students and teachers</td>
+            </tr>
+            <tr>
+                <td rowspan="3">Low</td>
+                <td>Inbox</td>
+                <td>This is where the user can contact other people if they know the recipient's id or username. However, the user can restrict messages from strangers in the Privacy settings.</td>
+            </tr>
+            <tr>
+                <td>Feedback</td>
+                <td>
+                    <p>This is where the user can provide feedback about how the application can be improved</p>
+                    <p>The user can also request for help or post issues so that the development team can know and have a solution</p>
+                </td>
+            </tr>
+            <tr>
+                <td>Help</td>
+                <td>This section contains information on how to use the application effectively as well as links to tutorial videos.</td>
+            </tr>
+            <tr>
+                <th colspan="3">Features for students</th>
+            </tr>
+            <tr>
+                <td rowspan="3">High</td>
+                <td>Courses</td>
+                <td>
+                    <p>Review the upcoming classes, times, locations, and lecturers.</p>
+                    <p>Allocate or drop courses (Details of the courses will appear once you click on the courses)</p>
+                    <p>Once students are successfully allocated to the courses. That is when the semester starts, weekly information about each course will be shown here. (Topics and assignments, the percentage for assignments with regard for the whole course)</p>
+                </td>
+            </tr>
+            <tr>
+                <td>Timetable</td>
+                <td>
+                    <p>Events:</p>
+                    <ul>
+                        <li>Add new events. Details of the event will be shown (location, time, etc.…)</li>
+                        <li>Remove events from the timetable</li>
+                    </ul>
+                    <p>Courses:</p>
+                    <ul>
+                        <li>Add courses: added courses will be reminded weekly on the calendar and will be notified 15 minutes (can be changed) prior to the classes, if it clashes with another class, students will be notified immediately</li>
+                        <li>Drop courses: students can request to drop a course with the instructor’s permission</li>
+                    </ul>
+                </td>
+            </tr>
+            <tr>
+                <td>Groups</td>
+                <td>
+                    <p>Group finding:</p>
+                    <ul>
+                        <li>View a group’s demand (Including goals, major, and class timetables)</li>
+                        <li>Request to join a group</li>
+                        <li>Leave the group</li>
+                    </ul>
+                    <p>My group:</p>
+                    <ul>
+                        <li>View member’s profile (such as goals, contact information, personality, and reviews from previous teammates)</li>
+                        <li>Requests</li>
+                        <li>View uploaded documents</li>
+                    </ul>
+                </td>
+            </tr>
+            <tr>
+                <td rowspan="7">Medium</td>
+                <td>History</td>
+                <td>
+                    <p>Lecture learned: </p>
+                    <ul>
+                        <li>View the previous lecturer’s profile, old slides, recordings of the previous lecture, and the lecture’s date.</li>
+                    </ul>
+                    <p>File upload:</p>
+                    <ul>
+                        <li>View uploaded files. (Contains the author, uploaded time, type of file; can be sorted based on latest, oldest, filetype)</li>
+                    </ul>
+                    <p>Download:</p>
+                    <ul>
+                        <li>Many download options: Videos and PowerPoints can be set so that it lowers space required (recommended for editing, practicing) or HD,4K, high quality formats that take up high space (recommended for presentations, meetings).</li>
+                    </ul>
+                </td>
+            </tr>
+            <tr>
+                <td>Document</td>
+                <td>A place for you to store documents, makes it easier to find using sorting function based on latest, oldest, topic, type of document and published your documents onto the platform straight from the document page when you’re in a rush.</td>
+            </tr>
+            <tr>
+                <td>Student aid</td>
+                <td>
+                    <p>This page contains:</p>
+                    <ul>
+                        <li>Link to students’ support if any help is needed.</li>
+                        <li>Test structure (students can view this page for instruction on how to present their assignments in the clearest way possible, view example format).</li>
+                    </ul>
+                </td>
+            </tr>
+            <tr>
+                <td>Performance</td>
+                <td>
+                    <p>On this page, students will find:</p>
+                    <ul>
+                        <li>Previous assignments and projects with the marks displayed in parallel</li>
+                        <li>Feedback from teachers or lecturers that address strengths and weaknesses</li>
+                        <li>The number of credits earned, and the amount needed to complete the course/ graduate</li>
+                    </ul>
+                </td>
+            </tr>
+            <tr>
+                <td>Goal Setting</td>
+                <td>
+                    <p>On this page, you can calculate your grades to see if you have reached your goal yet, or what you need to improve to reach your goal</p>
+                    <p>The system uses expected grades and your current grades to calculate how much more credits you need to achieve your goals</p>
+                </td>
+            </tr>
+            <tr>
+                <td>Profile page</td>
+                <td>Here you can update your information (major, minor, campus, aim, personality), contact links, profile picture, interests, and your strengths.</td>
+            </tr>
+            <tr>
+                <td>Assignments</td>
+                <td>Here all the assignments will be shown based on deadlines (date availability, demands, points)</td>
+            </tr>
+            <tr>
+                <th colspan="3">Feature for teachers</th>
+            </tr>
+            <tr>
+                <td rowspan="3">High</td>
+                <td>Courses (University) / Subject (Schools)</td>
+                <td>
+                    <p>Contains all the courses/ subjects that the user is teaching now</p>
+                    <p>The user can use this feature to access the detail of every course/ subject that they are teaching:</p>
+                    <ul>
+                        <li>Description of the course/ subject</li>
+                        <li>The number of students in the class</li>
+                        <li>The schedule of the class</li>
+                        <li>The location of the class</li>
+                        <li>The performance checking of each student in a class</li>
+                        <li>Specific notes for class in case some classes need different teaching methods</li>
+                    </ul>
+                </td>
+            </tr>
+            <tr>
+                <td>Timetable</td>
+                <td>Present the schedule of the user with events being marked on them. Different events will have different colors and priorities which the user can change or set as default. The user can also choose to get a reminder from a week or a day before the event.</td>
+            </tr>
+            <tr>
+                <td>Marking</td>
+                <td>This is where the assignments of the students are stored to be marked. The teacher can access the students’ assignments by going through Course → Class → Student which simplifies the process of searching through hundreds of files without sorting.</td>
+            </tr>
+            <tr>
+                <td rowspan="2">Medium</td>
+                <td>History&nbsp;</td>
+                <td>Provide the teacher with the record of which class they have been teaching in order of time.</td>
+            </tr>
+            <tr>
+                <td>Document</td>
+                <td>A place to store files that have been uploaded or downloaded. Teachers only need to upload the files to a specific folder and the data can be merged into the corresponding course/ subject.</td>
+            </tr>
+            <tr>
+                <td>Low</td>
+                <td>Profile page</td>
+                <td>
+                    <p>Present information about the teacher:</p>
+                    <ul>
+                        <li>Name</li>
+                        <li>Biography</li>
+                        <li>Related links</li>
+                        <li>Contact detail</li>
+                        <li>Major</li>
+                    </ul>
+                </td>
+            </tr>
+            <tr>
+                <th colspan="3">Feature for parents</th>
+            </tr>
+            <tr>
+                <td>High</td>
+                <td>Timetable</td>
+                <td>The user that is registered as a student’s parents can view the timetable of the student though they have no permission to change the timetable detail. In addition, the parents have fee deadlines added as events on their schedule.</td>
+            </tr>
+            <tr>
+                <td>Medium</td>
+                <td>Course/ subject</td>
+                <td>
+                    <p>The parent can learn about their child’s courses/ subjects with limited detail:</p>
+                    <ul>
+                        <li>Course/ subject name</li>
+                        <li>Course/ subject description</li>
+                        <li>Teachers</li>
+                    </ul>
+                </td>
+            </tr>
+            <tr>
+                <th rowspan="3">OUT OF SCOPE</th>
+                <td rowspan="3"></td>
+                <td>Fee online banking</td>
+                <td>Since the main purpose of the application is for management, it does not offer parents to pay for fees directly through the internet.&nbsp;</td>
+            </tr>
+            <tr>
+                <td>Commenting on other people profile</td>
+                <td>Although the user can access other clients’ profiles in the extent that they allow, there is no feature as comments on such profiles to maintain the fundamental objective of the application which is school management, and not a social media application.</td>
+            </tr>
+            <tr>
+                <td>Freely change your basic information on profile</td>
+                <td>The image, name, date of birth, and other basic information can only be changed by school administrators.</td>
+            </tr>
+        </table>
         <h4>
             <li>Limits:</li>
         </h4>
