--- a/tools.html
+++ b/tools.html
@@ -1,10 +1,10 @@
 <html lang="en">
 <head>
 <title>Tools</title>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="assets\pages.css">
-<link rel="icon" href="assets\img\images.png">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="assets\pages.css">
+  <link rel="icon" href="assets\img\images.png">
 </head>
 <body>
 
@@ -13,4 +13,9 @@
   <a href="team profile.html">Previous</a>
   <a href="project_description.html">Next</a>
 </div>
+
+<div class="content">
+
+</div>
+</body>
 </html>
