Commit Tools section

--- a/tools.html
+++ b/tools.html
@@ -1,21 +1,57 @@
+<!DOCTYPE html>
 <html lang="en">
-<head>
-<title>Tools</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="assets\pages.css">
-  <link rel="icon" href="assets\img\images.png">
-</head>
-<body>
+    <head>
+        <title>Tools</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="assets\pages.css">
+        <link rel="icon" href="assets\img\images.png">
+    </head>
+    <body>
 
-<div class="sidenav">
-  <a href="index.html">Home</a>
-  <a href="team profile.html">Previous</a>
-  <a href="project_description.html">Next</a>
-</div>
+        <div class="sidenav">
+        <a href="index.html">Home</a>
+        <a href="team profile.html">Previous</a>
+        <a href="project_description.html">Next</a>
+        </div>
 
-<div class="content">
-
-</div>
-</body>
+        <div class="content">
+            <h1>Tools</h1>
+            <p><strong>GitHub Repository: </strong><a href="https://github.com/nhatxminh/SchoolBuddy">https://github.com/nhatxminh/SchoolBuddy</a></p>
+            <table class="audit-comment">
+                <tr>
+                    <thead>
+                        <th>Member</th>
+                        <th>Comment</th>
+                    </thead>
+                </tr>
+                <tr>
+                    <td>Hoang Nguyen Nhat Minh</td>
+                    <td>
+                        The commit traffic for this website is quite dense and centralized in the span of 2 days. This was due to the urgency of the deadline since we have to prioritize the report content first. We spent the first day trying to come up and construct a website structure and upload content to the web. The following was used for debugging and decorating. Since this was our first collaborative website, there was bound to be mistakes and errors which were reflected on the deletion and addition ratio. Also, the fact that we were new to GitHub led to the inexperience of forming and merging branches, hence, the main workflow of our project is everyone focuses on their own page of the website and we combine them together.
+                    </td>
+                </tr>
+                <tr>
+                    <td>Nguyen Duc Trong</td>
+                    <td>
+                        As we can see that the density of the commit is quite crammed throughout the workflow. That is because we settled the appointment to complete the website after finalizing the report. Although we delegated the tasks among the members, there are still differences in the amount of commit and work. For example, some sections will contain tables with a lot of content, therefore it is painful to convert it from word to html. In addition, we have not utilized the use of branches yet as we decided to work directly to the main. This may sound dangerous but we have been notified to be careful before pushing our work into the main. All the teams' participants will have to perform peer-checking frequently, especially when we are finished and about to push our work. In the next project, I will try to set up the team schedule to spread the work and the traffic. So that we can track our performance better and easier to analyze our work.
+                    </td>
+                </tr>
+                <tr>
+                    <td>Nguyen Ha Minh Chau</td>
+                    <td>
+                        Based on the charts and graphs below, the main work of our project, which is for constructing and publishing the contents onto the proper website, mostly takes place in just one day, and the other day is for decorating and debugging. Mainly because the deadline is approaching and we have to prioritize finishing the report. And another thing is that we still haven’t made the best out of Github’s branch function. By doing so, there will be reduction in deletion, addition scale, which can lessen the density of our audit trail. And the team’s proficiency can be enhanced if there were to be more time spent on the website, for a less rushed work flow.
+                        
+                    </td>
+                </tr>
+                <tr>
+                    <td>Nguyen Hoang Minh</td>
+                    <td>
+                        After looking at the charts and graphs for the audit trail, I realize that the bulk of our website was created in only one day as that day had over 20 commits to ‘main’ and the day after was just over 10.This is largely due to our group focusing on other parts of the group report and leaving the website to be the last task we do. Another observation was that we did not utilize the branch function of Git and Github which would have made the addition/deletion ratio much better for the ‘main’ branch since conflicts or mistakes can be fixed before having a pull request and merge. For future projects, I feel that a sooner initialization of the git repository would help make the audit trail less dense and we can see the data more accurately instead of focusing on the two days which do not provide us with nearly as much data to analyze compared to us starting the website earlier. 
+                    </td>
+                </tr>
+            </table>
+        </div>
+        
+    </body>
 </html>
